--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,14 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.12",
     "@types/validator": "^13.11.10",
     "nodemon": "^3.1.1",
