--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,14 @@
     "multer": "^1.4.5-lts.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
+    "uuid": "^9.0.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.12",
+    "@types/uuid": "^9.0.8",
     "@types/validator": "^13.11.10",
     "nodemon": "^3.1.1",
     "prisma": "^5.14.0"
