--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,11 @@
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@redux-devtools/extension": "^3.3.0",
+    "@tanstack/react-query": "^5.50.1",
+    "@tanstack/react-query-devtools": "^5.50.1",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -28,7 +33,9 @@
     "react-table": "^7.8.0",
     "sass": "^1.77.6",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zukeeper": "^1.0.2",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
