--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/index.js",
-    "dev": "nodemon ./dist/index.js",
-    "watch": "tsc -w"
+    "watch:node": "nodemon ./dist/index.js",
+    "watch:ts": "tsc -w",
+    "dev": "concurrently \"npm run watch:node\" \"npm run watch:ts\""
   },
   "keywords": [],
   "author": "",
@@ -15,17 +16,20 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
+    "stripe": "^16.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "uuid": "^9.0.1",
     "validator": "^13.12.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
