vercel.json config added

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "ES2020" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "NodeNext" /* Specify what module code is generated. */,
-    "rootDir": "./src" /* Specify the root folder within your source files. */ /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */,
+    // "rootDir": "./src" /* Specify the root folder within your source files. */ /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */,
     "outDir": "./dist" /* Specify an output folder for all emitted files. */
-  }
+  },
+  "include": ["./src"]
 }
